# greenboy

./: .clang-format  .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  sonar-project.properties
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  README.md  StandardProjectSettings.cmake
include/greenboy/: Gameboy.hpp  cpu.hpp  fetch_execute_cpu.hpp  gameboy.hpp  instruction.hpp  memory_bus.hpp  opcode_translator.hpp  timing.hpp  types.hpp  video.hpp
include/greenboy/data_access/: added_word.hpp  byte_access.hpp  byte_register.hpp  constant_byte.hpp  decrementing_word.hpp  delayed_word_access.hpp  double_byte_word.hpp  immediate_byte.hpp  incrementing_word.hpp  indirect_byte.hpp  indirect_word.hpp  offsat_word.hpp  pre_decrementing_word.hpp  word_access.hpp  word_register.hpp
include/greenboy/instructions/: add.hpp  byte_arithmetic_operation.hpp  byte_load.hpp  instructions.hpp  word_load.hpp
src/greenboy/: Gameboy.cpp  cpu.cpp  fetch_execute_cpu.cpp  gameboy.cpp  instruction.cpp  memory_bus.cpp  opcode_translator.cpp  timing.cpp  types.cpp  video.cpp
src/greenboy/data_access/: added_word.cpp  byte_access.cpp  byte_register.cpp  constant_byte.cpp  decrementing_word.cpp  delayed_word_access.cpp  double_byte_word.cpp  immediate_byte.cpp  incrementing_word.cpp  indirect_byte.cpp  indirect_word.cpp  offsat_word.cpp  pre_decrementing_word.cpp  word_access.cpp  word_register.cpp
src/greenboy/instructions/: add.cpp  byte_arithmetic_operation.cpp  byte_load.cpp  word_load.cpp
tests/: CMakeLists.txt
tests/greenboy/: data_access.cpp  fetch_execute_cpu.cpp  gameboy.cpp  individual_instructions.cpp  instructions.cpp
tests/greenboy/mocks/: byte_access.hpp  cpu.hpp  instruction.hpp  memory_bus.hpp  opcode_translator.hpp  video.hpp  word_access.hpp
